new code updated

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\bsikarwar\eclipse-workspace\myframework\testng.xml</span>
+                    <span>C:\Users\bsikarwar\eclipse-workspace\CyberToDCTAutomation\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,21 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
                     </span>
-                    <div class="method-list-content passed suite-Suite">
+                    <div class="method-list-content failed suite-Suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.tests.OrangeHRMTest" hash-for-method="loginLogoutTest(Admin, admin123)">loginLogoutTest(Admin, admin123)</a> <!-- method navigator-link -->
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.common.qa.testcases.DCTQuickQuoteTest" hash-for-method="DCTQuickQuoteFlowTest({lossdate=, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=New, producer...)">DCTQuickQuoteFlowTest({lossdate=, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=New, producer...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Suite -->
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,41 +117,53 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.tests.OrangeHRMTest</span>
+              <img src="failed.png"/>
+              <span class="class-name">com.common.qa.testcases.DCTQuickQuoteTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginLogoutTest(Admin, admin123)">
-                  </a> <!-- loginLogoutTest(Admin, admin123) -->
-                  <span class="method-name">loginLogoutTest</span>
-                  <span class="parameters">(Admin, admin123)</span>
+                  <a name="DCTQuickQuoteFlowTest({lossdate=, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=New, producer...)">
+                  </a> <!-- DCTQuickQuoteFlowTest({lossdate=, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=New, producer...) -->
+                  <span class="method-name">DCTQuickQuoteFlowTest</span>
+                  <span class="parameters">({lossdate=, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=New, produceremail=, ratablerevenue=10000, effectivedate=6/14/2021, insuredcontactemail=test@email.com, YearEstablished=, password=admin, insuredaddress=23, St taken, continutitydate=6/14/2021, browser=chrome, lossratio=61% to 100%, claimhistorycommants=testing, quoteprmium=, commission=20, company=Crum & Forster Specialty Insurance Company, state=NY, zip=14804, ecrimelosssubmitofliability=, insuredname=test0706, ExpandedFirstParty=yes, MultimediaCoverage=yes, yearsofpriorcoverage=20, aggregatelimitofliability=, WaitingPeriod=8, noofclaims=100, naicscode=, selecteddeductible=, Ecrime=no, testname=DCTQuickQuoteFlowTest, execute=yes, totallossincurred=3000000, guidelinedeductible=, insuredcontactname=bhuvanesh, domain=www, amountpaid=, insuredcontactphone=378873878, underwriter=Cheryl Shema, username=admin, status=})</span>
+                  <div class="stack-trace">java.lang.NullPointerException
+	at com.framework.pages.QuickQuotePage.covereageOptions(QuickQuotePage.java:124)
+	at com.common.qa.testcases.DCTQuickQuoteTest.DCTQuickQuoteFlowTest(DCTQuickQuoteTest.java:39)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
+	at java.lang.Thread.run(Thread.java:748)
+... Removed 9 stack frames
+</div> <!-- stack-trace -->
                   <em>
-(To check whether the user can successfully login and logout)                  </em>
+(To check whether user is able to create quote using Quick Quote)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
+          </div> <!-- suite-Suite-class-failed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bsikarwar\eclipse-workspace\myframework\testng.xml</span>
+            <span class="header-content">C:\Users\bsikarwar\eclipse-workspace\CyberToDCTAutomation\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot; data-provider-thread-count=&quot;2&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot; data-provider-thread-count=&quot;1&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.framework.listeners.ListenerClass&quot;/&gt;
     &lt;listener class-name=&quot;com.framework.listeners.MetholdInterceptor&quot;/&gt;
+    &lt;listener class-name=&quot;com.framework.listeners.AnnotationTransformer&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;1&quot; name=&quot;Test&quot; parallel=&quot;methods&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.tests.OrangeHRMTest&quot;/&gt;
+      &lt;class name=&quot;com.common.qa.testcases.DCTQuickQuoteTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -193,14 +205,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginLogoutTest')
-data.setCell(0, 2, 'com.tests.OrangeHRMTest')
-data.setCell(0, 3, 2416);
+data.setCell(0, 1, 'DCTQuickQuoteFlowTest')
+data.setCell(0, 2, 'com.common.qa.testcases.DCTQuickQuoteTest')
+data.setCell(0, 3, 39002);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 39 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -226,18 +238,20 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.tests.OrangeHRMTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.common.qa.testcases.DCTQuickQuoteTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setUp</span>
+                <span class="method-name">setUp([{lossdate=, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=New, produce...)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginLogoutTest(Admin, admin123)</span>
-                <span class="method-start">3142 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">DCTQuickQuoteFlowTest({lossdate=, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=New, producer...)</span>
+                <span class="method-start">4036 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5563 ms</span>
+                <span class="method-start">43178 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
