--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,19 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">7,195</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">45,001</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.tests.OrangeHRMTest</td><td><a href="#m0">loginLogoutTest</a></td><td rowspan="1">1621364023782</td><td rowspan="1">2416</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.common.qa.testcases.DCTQuickQuoteTest</td><td><a href="#m0">DCTQuickQuoteFlowTest</a></td><td rowspan="1">1624876650167</td><td rowspan="1">39002</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.tests.OrangeHRMTest#loginLogoutTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.common.qa.testcases.DCTQuickQuoteTest#DCTQuickQuoteFlowTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{lossdate=, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=New, produceremail=, ratablerevenue=10000, effectivedate=6/14/2021, insuredcontactemail=test@email.com, YearEstablished=, password=admin, insuredaddress=23, St taken, continutitydate=6/14/2021, browser=chrome, lossratio=61% to 100%, claimhistorycommants=testing, quoteprmium=, commission=20, company=Crum &amp; Forster Specialty Insurance Company, state=NY, zip=14804, ecrimelosssubmitofliability=, insuredname=test0706, ExpandedFirstParty=yes, MultimediaCoverage=yes, yearsofpriorcoverage=20, aggregatelimitofliability=, WaitingPeriod=8, noofclaims=100, naicscode=, selecteddeductible=, Ecrime=no, testname=DCTQuickQuoteFlowTest, execute=yes, totallossincurred=3000000, guidelinedeductible=, insuredcontactname=bhuvanesh, domain=www, amountpaid=, insuredcontactphone=378873878, underwriter=Cheryl Shema, username=admin, status=}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at com.framework.pages.QuickQuotePage.covereageOptions(QuickQuotePage.java:124)
+	at com.common.qa.testcases.DCTQuickQuoteTest.DCTQuickQuoteFlowTest(DCTQuickQuoteTest.java:39)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
+	at java.lang.Thread.run(Thread.java:748)
+... Removed 9 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
