--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bcfcb">  <td>21/05/18 14:53:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.tests.OrangeHRMTest@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@1724089365</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>21/05/18 14:53:43</td>   <td>3141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRMTest.loginLogoutTest(java.lang.String, java.lang.String)[pri:0, instance:com.tests.OrangeHRMTest@66a3ffec]">loginLogoutTest</td> 
-  <td>TestNG-PoolService-0@1724089365</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>21/05/18 14:53:46</td>   <td>5562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.OrangeHRMTest@66a3ffec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@1724089365</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>21/06/28 16:07:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@6d4b1c02]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@1022302101</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>21/06/28 16:07:30</td>   <td>4034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest.DCTQuickQuoteFlowTest(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@6d4b1c02]">DCTQuickQuoteFlowTest</td> 
+  <td>TestNG-PoolService-0@1022302101</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>21/06/28 16:08:09</td>   <td>43176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@6d4b1c02]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@1022302101</td>   <td></td> </tr>
 </table>
