--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,26 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 2 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
-                    <div class="method-list-content failed suite-Suite">
+                    <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.common.qa.testcases.DCTQuickQuoteTest" hash-for-method="DCTQuickQuoteFlowTest({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...)">DCTQuickQuoteFlowTest({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...)</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.common.qa.testcases.DCTQuickQuoteTest" hash-for-method="DCTQuickQuoteFlowTest({nyftz=yes, produceremail=crum@test.com, extracoveragecomment=test, insuredcontactemail=test@email.c...)">DCTQuickQuoteFlowTest({nyftz=yes, produceremail=crum@test.com, extracoveragecomment=test, insuredcontactemail=test@email.c...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.common.qa.testcases.DCTQuickQuoteTest" hash-for-method="DCTQuickQuoteFlowTest1({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...)">DCTQuickQuoteFlowTest1({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -122,58 +117,24 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
+          <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.common.qa.testcases.DCTQuickQuoteTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="DCTQuickQuoteFlowTest({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...)">
-                  </a> <!-- DCTQuickQuoteFlowTest({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...) -->
+                  <a name="DCTQuickQuoteFlowTest({nyftz=yes, produceremail=crum@test.com, extracoveragecomment=test, insuredcontactemail=test@email.c...)">
+                  </a> <!-- DCTQuickQuoteFlowTest({nyftz=yes, produceremail=crum@test.com, extracoveragecomment=test, insuredcontactemail=test@email.c...) -->
                   <span class="method-name">DCTQuickQuoteFlowTest</span>
-                  <span class="parameters">({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, insuredaddress=23, St taken, claimhistorycommants=testing, quoteprmium=10000, state=NY, zip=14804, ecrimelosssubmitofliability=, brokername=Bhuvanesh, noofclaims=100, Ecrime=no, testname=DCTQuickQuoteFlowTest, execute=yes, totallossincurred=3000000, guidelinedeductible=, finalpremium=10000, domain=www, amountpaid=1000, insuredcontactphone=1112223333, status=, option=one, lossdate=06/30/2021, dependentbusinesssubmitofliability=, city=New York, accounttype=New, ratablerevenue=10000, effectivedate=6/14/2021, brokerfirm=Crum, continutitydate=6/14/2021, browser=chrome, lossratio=61% to 100%, commission=20, company=Crum & Forster Specialty Insurance Company, insuredname=test0706, ExpandedFirstParty=yes, MultimediaCoverage=yes, yearsofpriorcoverage=20, aggregatelimitofliability=$500,000, WaitingPeriod=8, naicscode=, selecteddeductible=1000, priorclaimhistorystatus=Open, insuredcontactname=bhuvanesh, underwriter=Cheryl Shema, username=admin})</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at com.framework.pages.QuickQuotePage.limitanddeductible(QuickQuotePage.java:180)
-	at com.common.qa.testcases.DCTQuickQuoteTest.DCTQuickQuoteFlowTest(DCTQuickQuoteTest.java:39)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 9 stack frames
-</div> <!-- stack-trace -->
+                  <span class="parameters">({nyftz=yes, produceremail=crum@test.com, extracoveragecomment=test, insuredcontactemail=test@email.com, YearEstablished=2000, insuredaddress=23, St taken, claimhistorycommants=testing, quoteprmium=10000, state=NY, zip=14804, ecrimelosssubmitofliability=, fraudulentinvoice=no, noofclaims=1, testname=DCTQuickQuoteFlowTest, ecrime=yes, execute=yes, producercontact=1234567891, guidelinedeductible=, finalpremium=10000, domain=www, amountpaid=1000, insuredcontactphone=111-222-3333, additionalcoveragedescription=testing, status=Open, option=one, lossdate=06/30/2021, dependentbusinesssubmitofliability=, city=New York, accounttype=New, underwritercomment=ok, multimediacoverage=yes, ratablerevenue=10000, effectivedate=6/14/2021, priorclaimlossdate=7/7/2021, producerrname=Bhuvanesh, continutitydate=6/14/2021, browser=chrome, company=Crum & Forster Specialty Insurance Company, commission=20, ratinglevel=Standard, quoteversiondescription=testing, insuredname=test0716, totalincurred=1000, yearsofpriorcoverage=20, aggregatelimitofliability=$500,000, naicscode=52421X Insurance Brokers, increasesublimits=no, selecteddeductible=1000, waitingperiod=10, priorclaimhistorystatus=Open, expandedfirstparty=yes, insuredcontactname=bhuvanesh, underwriter=Cheryl Shema, coveragepremiun=1000})</span>
                   <em>
-(To check whether user is able to create quote using Quick Quote on Chrome)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="DCTQuickQuoteFlowTest1({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...)">
-                  </a> <!-- DCTQuickQuoteFlowTest1({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...) -->
-                  <span class="method-name">DCTQuickQuoteFlowTest1</span>
-                  <span class="parameters">({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, insuredaddress=23, St taken, claimhistorycommants=testing, quoteprmium=, state=NY, zip=14804, ecrimelosssubmitofliability=, brokername=Bhuvanesh, noofclaims=100, Ecrime=no, testname=DCTQuickQuoteFlowTest1, execute=yes, totallossincurred=3000000, guidelinedeductible=, finalpremium=, domain=www, amountpaid=1000, insuredcontactphone=1112223333, status=, option=, lossdate=06/30/2021, dependentbusinesssubmitofliability=, city=New York, accounttype=New, ratablerevenue=10000, effectivedate=6/14/2021, brokerfirm=Crum, continutitydate=6/14/2021, browser=firefox, lossratio=61% to 100%, commission=20, company=Crum & Forster Specialty Insurance Company, insuredname=test0706, ExpandedFirstParty=yes, MultimediaCoverage=yes, yearsofpriorcoverage=20, aggregatelimitofliability=, WaitingPeriod=8, naicscode=, selecteddeductible=, priorclaimhistorystatus=Open, insuredcontactname=bhuvanesh, underwriter=Cheryl Shema, username=admin})</span>
-                  <div class="stack-trace">java.lang.IllegalArgumentException: Keys to send should be a not null CharSequence
-	at org.openqa.selenium.remote.RemoteWebElement.sendKeys(RemoteWebElement.java:97)
-	at com.framework.pages.BasePage.sendKeysWithoutClick(BasePage.java:34)
-	at com.framework.pages.QuickQuotePage.priorClaimHistory(QuickQuotePage.java:124)
-	at com.common.qa.testcases.DCTQuickQuoteTest.DCTQuickQuoteFlowTest1(DCTQuickQuoteTest.java:68)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 9 stack frames
-</div> <!-- stack-trace -->
-                  <em>
-(To check whether user is able to create quote using Quick Quote on Firefox)                  </em>
+(To check whether user is able to enter values in General and Prior Claim History Page on Chrome browser)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -189,9 +150,10 @@
     &lt;listener class-name=&quot;com.framework.listeners.MetholdInterceptor&quot;/&gt;
     &lt;listener class-name=&quot;com.framework.listeners.AnnotationTransformer&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;2&quot; name=&quot;Test&quot; parallel=&quot;methods&quot;&gt;
+  &lt;test thread-count=&quot;2&quot; name=&quot;Test&quot; parallel=&quot;classes&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.common.qa.testcases.DCTQuickQuoteTest&quot;/&gt;
+      &lt;class name=&quot;com.common.qa.testcases.DCTQuickQuoteTest1&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -205,7 +167,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -231,20 +193,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'DCTQuickQuoteFlowTest')
 data.setCell(0, 2, 'com.common.qa.testcases.DCTQuickQuoteTest')
-data.setCell(0, 3, 28523);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'DCTQuickQuoteFlowTest1')
-data.setCell(1, 2, 'com.common.qa.testcases.DCTQuickQuoteTest')
-data.setCell(1, 3, 26428);
+data.setCell(0, 3, 43935);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 54 seconds</span>
+              <span class="suite-total-time">Total running time: 43 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -272,32 +230,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.common.qa.testcases.DCTQuickQuoteTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setUp([{lossdate=06/30/2021, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=Ne...)</span>
+                <span class="method-name">setUp([{nyftz=yes, produceremail=crum@test.com, extracoveragecomment=test, insuredcontactemail=test@email....)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp([{lossdate=06/30/2021, dependentbusinesssubmitofliability=, city=New York, nyftz=yes, accounttype=Ne...)</span>
-                <span class="method-start">2 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">DCTQuickQuoteFlowTest1({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...)</span>
-                <span class="method-start">13406 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">DCTQuickQuoteFlowTest({nyftz=yes, produceremail=, insuredcontactemail=test@email.com, YearEstablished=, password=admin, in...)</span>
-                <span class="method-start">14449 ms</span>
+                <span class="method-name">DCTQuickQuoteFlowTest({nyftz=yes, produceremail=crum@test.com, extracoveragecomment=test, insuredcontactemail=test@email.c...)</span>
+                <span class="method-start">6940 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">39941 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">43103 ms</span>
+                <span class="method-start">50878 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
