--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94c7ba">  <td>21/07/05 12:39:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@548e7350]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@848924962</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>21/07/05 12:39:54</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@548e7350]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@848924962</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>21/07/05 12:40:07</td>   <td>13402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest.DCTQuickQuoteFlowTest1(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@548e7350]">DCTQuickQuoteFlowTest1</td> 
-  <td>TestNG-PoolService-0@848924962</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>21/07/05 12:40:08</td>   <td>14445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest.DCTQuickQuoteFlowTest(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@548e7350]">DCTQuickQuoteFlowTest</td> 
-  <td>TestNG-PoolService-0@1422385137</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>21/07/05 12:40:34</td>   <td>39937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@548e7350]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@1422385137</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>21/07/05 12:40:37</td>   <td>43100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@548e7350]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@1422385137</td>   <td></td> </tr>
+<tr bgcolor="6ab1ab">  <td>21/07/19 16:29:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@1a968a59]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@2086213851</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>21/07/19 16:29:07</td>   <td>6939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest.DCTQuickQuoteFlowTest(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@1a968a59]">DCTQuickQuoteFlowTest</td> 
+  <td>TestNG-PoolService-0@2086213851</td>   <td></td> </tr>
+<tr bgcolor="6ab1ab">  <td>21/07/19 16:29:51</td>   <td>50878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@1a968a59]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@2086213851</td>   <td></td> </tr>
 </table>
