--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>21/08/02 11:36:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest.DCTQuickQuoteFlowTest(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@1a968a59]">DCTQuickQuoteFlowTest</td> 
-  <td>TestNG-PoolService-0@1149746925</td>   <td></td> </tr>
-<tr bgcolor="6ab1ab">  <td>21/08/02 11:36:28</td>   <td>-5417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@1a968a59]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@1149746925</td>   <td></td> </tr>
-<tr bgcolor="6ab1ab">  <td>21/08/02 11:37:33</td>   <td>59434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest@1a968a59]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@1149746925</td>   <td></td> </tr>
+<tr bgcolor="616382">  <td>21/08/09 18:57:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest5.QuickQuoteFlowTest5(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@619713e5]">QuickQuoteFlowTest5</td> 
+  <td>TestNG-PoolService-0@1187410703</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>21/08/09 18:57:35</td>   <td>-5151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@619713e5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@1187410703</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>21/08/09 19:00:51</td>   <td>190246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@619713e5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@1187410703</td>   <td></td> </tr>
 </table>
