--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d8c9b7">  <td>21/08/09 18:57:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@619713e5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@1187410703</td>   <td></td> </tr>
-<tr bgcolor="616382">  <td>21/08/09 18:57:40</td>   <td>5151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCTQuickQuoteTest5.QuickQuoteFlowTest5(java.util.Map)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@619713e5]">QuickQuoteFlowTest5</td> 
-  <td>TestNG-PoolService-0@1187410703</td>   <td></td> </tr>
-<tr bgcolor="d8c9b7">  <td>21/08/09 19:00:51</td>   <td>195397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest5@619713e5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-PoolService-0@1187410703</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>21/08/10 13:50:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:com.common.qa.testcases.DCTQuickQuoteTest1@464bee09]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-0@764918755</td>   <td></td> </tr>
 </table>
